--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,7 @@
+{% load static %}
+
+{% url 'home' as home_url %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -5,9 +9,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BET CLUB</title>
-    <link rel="stylesheet" href="style.css">
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+        rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+        crossorigin="anonymous">
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
   </head>
   <body>
-    <script src="index.js"></script>
+    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Home
+                <span class="visually-hidden">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">ScorePredict</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">LMS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Football Season</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Golf</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Horses</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Play</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="../horse.html">Horse Racing</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Create Game</a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">LMS</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Separated link</a>
+              </div>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <input class="form-control me-sm-2" type="search" placeholder="Search">
+            <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    <main class="flex-shrink-0 main-bg">
+      {% block content %}
+      <!-- Content Goes here -->
+      {% endblock content %}
+    </main>
+  <!-- Footer -->
+  <footer class="footer text-white bg-secondary mb-3">
+      <p class="text-center bg-secondary">© Barry Mays 2024
+          <!-- <a href="https://github.com/bmays9" target="_blank" aria-label="Barry Mays Github"><i class="fab fa-2x fa-github ms-3 text-white bg-secondary"></i></a> -->
+          <!-- <a href="mailto:barrykmays@gmail.com" aria-label="Email Barry Mays"><i class="fa-2x fa-regular fa-envelope ms-3 text-white bg-secondary"></i></a> -->
+      </p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="index.js"></script>
   </body>
 </html>
