--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
         crossorigin="anonymous">
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="stylesheet" href="{% static 'css/custom_style.css' %}">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
