Update to horse start page

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
       {% endblock content %}
     </main>
   <!-- Footer -->
-  <footer class="footer text-white bg-secondary mb-3">
+  <footer class="footer text-white bg-secondary fixed-bottom">
       <p class="text-center bg-secondary">© Barry Mays 2024
           <!-- <a href="https://github.com/bmays9" target="_blank" aria-label="Barry Mays Github"><i class="fab fa-2x fa-github ms-3 text-white bg-secondary"></i></a> -->
           <!-- <a href="mailto:barrykmays@gmail.com" aria-label="Email Barry Mays"><i class="fa-2x fa-regular fa-envelope ms-3 text-white bg-secondary"></i></a> -->
