HR-display meeting info

--- a/templates/horse.html
+++ b/templates/horse.html
@@ -7,51 +7,13 @@
 
 <div class="game-state" id="game-state">
   <div class="meeting-info">
-    <h4>Next Meeting: Chepstow (1 of 16)</h2>
-    <h5>Going: Good</h3>
+    <h4>Next Meeting: <span id="gs-meeting">Chepstow (1 of 16)</span></h4>
+    <h5>Going: Good</h5>
   </div>
   <div class="meeting-races">
-    <table class="table table-hover">
-      <thead>
-        <tr>
-          <th scope="col">Time</th>
-          <th scope="col">Distance</th>
-          <th scope="col">Name</th>
-          <th scope="col">Prize Money</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr class="table-active">
-          <td>1:15</td>
-          <td>5f</td>
-          <td>The Brocklesby</td>
-          <td>£5000</td>
-        </tr>
-        <tr class="table-active">
-          <td>1:15</td>
-          <td>5f</td>
-          <td>The Brocklesby</td>
-          <td>£5000</td>
-        </tr>
-        <tr class="table-active">
-          <td>1:15</td>
-          <td>5f</td>
-          <td>The Brocklesby</td>
-          <td>£5000</td>
-        </tr>
-        <tr class="table-active">
-          <td>1:15</td>
-          <td>5f</td>
-          <td>The Brocklesby</td>
-          <td>£5000</td>
-        </tr>
-        <tr class="table-active">
-          <td>1:15</td>
-          <td>5f</td>
-          <td>The Brocklesby</td>
-          <td>£5000</td>
-        </tr>
-      </tbody>
+    <table class="table table-hover" id="gs-meeting-races">
+      <!-- Javascript will fill the table-->
+    </table>
 </div>
 
 <div class="modal" id="gameOptionsModal" aria-labelledby="gameOptionsLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
