--- a/templates/horse.html
+++ b/templates/horse.html
@@ -14,9 +14,21 @@
     <table class="table table-hover" id="gs-meeting-races">
       <!-- Javascript will fill the table-->
     </table>
+  </div>
 </div>
 
-<div class="modal" id="gameOptionsModal" aria-labelledby="gameOptionsLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="player-standings" id="player-standings">
+  <div class="player-table">
+    <h4>Current Standings</h4>
+  </div>
+  <div class="meeting-races">
+    <table class="table table-hover" id="gs-players">
+      <!-- Javascript will fill the table-->
+    </table>
+  </div>
+</div>
+
+<div class="modal" id="gameOptionsModal" aria-labelledby="gameOptionsLabel" data-bs-backdrop="static" data-bs-keyboard="false">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
