--- a/static/css/custom_style.css
+++ b/static/css/custom_style.css
@@ -16,8 +16,9 @@
 }
 
 .game-state {
-
+    padding: 4px;
 }
+
 
 .gs-meeting-races {
     font-size: 0.6rem;        /* smaller than default */
@@ -31,4 +32,9 @@
   padding: 5px 20px;        /* some spacing */
   margin: 0;                 /* remove default margin if needed */
   text-align: center;        /* optional: center the text */
+}
+
+/* Target all tables or specific ones */
+#gs-meeting-races, #gs-players {
+    font-size: 10px;  /* Adjust the font size as needed */
 }
