--- a/templates/horse.html
+++ b/templates/horse.html
@@ -8,7 +8,6 @@
 <div class="game-state" id="game-state">
   <div class="meeting-info">
     <h6><span id="next-meeting">Next Meeting: </span><span id="gs-meeting">Catterick (1 of 16)</span></h6>
-    <h7>Going: Good</h7>
   </div>
   <div class="meeting-races">
     <table class="table table-hover table-sm" id="gs-meeting-races">
@@ -20,7 +19,7 @@
     <div class="player-title">
       <h4 id="gs-standings">Current Standings</h4>
     </div>
-    <div class="player-table">
+    <div class="player-table small-font">
       <table class="table table-hover table-sm" id="gs-players">
         <!-- Javascript will fill the table-->
       </table>
@@ -30,8 +29,7 @@
 </div>
 
 <div id="race-selections">
-  <h6 id="st-meeting-going" class="meeting">Chepstow</h6>
-  <div class="selection-table">
+  <div class="selection-table small-font">
     <table class="table table-hover table-sm" id="race-selection">
       <!-- Javascript will fill the table-->
     </table>
@@ -39,8 +37,8 @@
 </div>
 
 <div id="player-stable">
-  <h6 id="stable-name">Stable</h6>
-  <div class="selection-table">
+  <h6 id="stable-name"></h6>
+  <div class="selection-table small-font">
     <table class="table table-hover table-sm" id="st-selection">
       <!-- Javascript will fill the table-->
     </table>
@@ -48,7 +46,7 @@
 </div>
 
 <div id="player-stable">
-  <h6 id="stable-name">Horses</h6>
+  <h6 id="stable-name"></h6>
   <div class="stable-table">
     <table class="table table-hover table-sm" id="st-horses">
       <!-- Javascript will fill the table-->
