--- a/static/css/custom_style.css
+++ b/static/css/custom_style.css
@@ -3,6 +3,69 @@
     --bs-font-sans-serif: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+.small-font {
+    font-size: 0.6rem;
+}
+
+.date-font {
+    font-size: 0.5rem;
+}
+
+.fixture {
+    font-size: 0.9rem;
+    padding-left: 20px;
+}
+
+/* Score Predict */
+.prediction-cell {
+  font-weight: 500;
+  width: 40px;
+  height: auto;
+  border-left: 1px solid #ccc;
+  padding: 4px 6px;
+  line-height: 1.2;
+  text-align: center;
+  font-size: 0.8rem;
+  transition: background-color 0.2s, color 0.2s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+  
+  .accordion-button {
+    font-size: 0.95rem;
+    padding: 0.5rem 0.75rem;
+  }
+
+  .score-pred-cell {
+    width: 36px;
+    height: 28px;
+    font-size: 0.75rem;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  .accordion-button .prediction-cell {
+    transition: background-color 0.3s, color 0.3s;
+  }
+  
+  .prediction-cell.green {
+    background-color: #198754; /* Bootstrap success */
+    color: white;
+    font-weight: bold;
+  }
+  
+  .prediction-cell.red {
+    background-color: #dc3545; /* Bootstrap danger */
+    color: white;
+    font-weight: bold;
+  }
+
+
+/* Horse Racing */
 .player-entry {
     display: flex;
     align-items: center;
@@ -24,9 +87,7 @@
        
 }
 
-.small-font {
-    font-size: 0.6rem;
-}
+
 
 #game-banner {
   font-size: 1rem;        /* smaller than default */
@@ -40,4 +101,26 @@
 /* Target all tables or specific ones */
 #gs-meeting-races, #gs-players {
     font-size: 10px;  /* Adjust the font size as needed */
+}
+
+
+@media (max-width: 576px) {
+  .score-pred-cell {
+    width: 30px; /* Further reduce size on smaller screens */
+    height: 24px;
+    font-size: 0.7rem;
+  }
+
+  .fixture {
+    font-size: 0.8rem; /* Adjust font size for mobile */
+  }
+
+  .d-flex {
+    display: block; /* Stack vertically on smaller screens */
+    text-align: center;
+  }
+
+  .d-flex .fixture {
+    margin-bottom: 5px;
+  }
 }
