--- a/static/css/custom_style.css
+++ b/static/css/custom_style.css
@@ -30,6 +30,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 6px; /* <-- adds the rounded corners */
 }
   
   .accordion-button {
