HR: Race entry updates

--- a/templates/horse.html
+++ b/templates/horse.html
@@ -9,7 +9,7 @@
   <div class="meeting-info">
     <h6><span id="next-meeting">Next Meeting: </span><span id="gs-meeting">Catterick (1 of 16)</span></h6>
   </div>
-  <div class="meeting-races">
+  <div class="meeting-races" id="page-info">
     <table class="table table-hover table-sm" id="gs-meeting-races">
       <!-- Javascript will fill the table-->
     </table>
