HR: Updates to meeting end

--- a/templates/horse.html
+++ b/templates/horse.html
@@ -78,7 +78,7 @@
   <!-- 🟢 Start / Next Race Buttons -->
   <div class="text-center mt-4">
     <button id="start-race" class="btn btn-lg btn-success">Start Race</button>
-    <button id="next-race" class="btn btn-lg btn-success">Next Race</button>
+    <button id="next-race" class="btn btn-lg btn-success" disabled>Next Race</button>
   </div>
 
 </div>
