--- a/static/css/custom_style.css
+++ b/static/css/custom_style.css
@@ -104,6 +104,9 @@
     font-size: 10px;  /* Adjust the font size as needed */
 }
 
+#historyModalContent {
+  font-size: 9px;  
+}
 
 @media (max-width: 576px) {
   .score-pred-cell {
