--- a/templates/horse.html
+++ b/templates/horse.html
@@ -154,7 +154,7 @@
           <h5 class="modal-title" id="historyModalLabel">Horse Race History</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body" id="modalBodyContent">
+        <div class="modal-body" id="historyModalContent">
           <!-- Filled dynamically -->
         </div>
         <div class="modal-footer">
