--- a/staticfiles/css/custom_style.css
+++ b/staticfiles/css/custom_style.css
@@ -4,7 +4,7 @@
 }
 
 .small-font {
-    font-size: 0.6rem;
+    font-size: 0.8rem;
 }
 
 .date-font {
@@ -104,8 +104,8 @@
     font-size: 10px;  /* Adjust the font size as needed */
 }
 
-.horse-select {
-  width: 30px;
+#historyModalContent {
+  font-size: 9px;  
 }
 
 @media (max-width: 576px) {
