--- a/templates/horse.html
+++ b/templates/horse.html
@@ -37,13 +37,13 @@
 </div>
 
 <div id="player-selections">
-    <h6 id="stable-name"></h6>
-    <div class="selection-table small-font">
-      <table class="table table-hover table-sm" id="st-selection">
-        <!-- Javascript will fill the table -->
-      </table>
-    </div>
-</div> 
+  <h6 id="stable-name"></h6>
+  <div class="selection-table small-font table-responsive" style="overflow-x: auto;">
+    <table class="table table-hover table-sm" id="st-selection">
+      <!-- Javascript will fill the table -->
+    </table>
+  </div>
+</div>
 
   <div id="player-stable">
     <h6 id="stable-name"></h6>
