HR: Fix issue with empty computer selections

--- a/templates/horse.html
+++ b/templates/horse.html
@@ -48,7 +48,7 @@
   <div id="player-stable">
     <h6 id="stable-name"></h6>
     <div class="stable-table">
-      <table class="table table-hover table-sm" id="st-horses">
+      <table class="table table-hover table-sm ms-3 mt-1" id="st-horses">
         <!-- Javascript will fill the table-->
       </table>
     </div>
