--- a/staticfiles/css/custom_style.css
+++ b/staticfiles/css/custom_style.css
@@ -1,8 +1,19 @@
+/* All pages */
+
 :root,
 [data-bs-theme=light] {
     --bs-font-sans-serif: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+body {
+  margin: 0;
+  padding: 1rem;
+  max-width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: sans-serif;
+  box-sizing: border-box;
+}
 .small-font {
     font-size: 0.8rem;
 }
