--- a/static/css/custom_style.css
+++ b/static/css/custom_style.css
@@ -7,13 +7,24 @@
 
 body {
   margin: 0;
-  padding: 1rem;
+  padding: 0;
+  max-width: 1800px;
+  margin-left: auto;
+  margin-right: auto;
+  font-family: sans-serif;
+  box-sizing: border-box;
+}
+
+main {
+  margin: 0;
+  padding: 0.7rem;
   max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
   font-family: sans-serif;
   box-sizing: border-box;
 }
+
 .small-font {
     font-size: 0.8rem;
 }
