--- a/score_predict/templates/score_predict/fixtures.html
+++ b/score_predict/templates/score_predict/fixtures.html
@@ -3,7 +3,47 @@
 {% block content %}
 <!-- content starts here -->
 <div class="container mx-auto p-4">
-    <h1 class="text-2xl font-bold mb-4">Score Predictions</h1>
+    <ul class="nav nav-tabs" role="tablist">
+  <li class="nav-item" role="presentation">
+    <a class="nav-link active" data-bs-toggle="tab" href="#weekend" aria-selected="true" role="tab">Weekend</a>
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="nav-link" data-bs-toggle="tab" href="#midweek" aria-selected="false" role="tab" tabindex="-1">Midweek</a>
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="nav-link" href="#" aria-selected="false" tabindex="-1" role="tab">Entered</a>
+  </li>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Choose Leagues</a>
+    <div class="dropdown-menu">
+      <h6 class="dropdown-header">Available Leagues</h6>
+      <a class="dropdown-item" href="#">English</a>
+      <a class="dropdown-item" href="#">TBC</a>
+      <a class="dropdown-item" href="#">TBC</a>
+      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="#">TBC</a>
+    </div>
+  </li>
+</ul>
+<div id="myTabContent" class="tab-content">
+  <div class="tab-pane fade active show" id="weekend" role="tabpanel">
+    <p>Upcoming weekend Fixtures. 3 group members entered</p>
+    <p>
+      <button disabled id="submit-scores" class="btn btn-primary">Submit</button>
+      <label class="col-form-label mt-4" for="entryfee-sp">Amount (£):</label>
+      <input type="text" class="entry-fee" placeholder="5.00" id="entryfee-sp">
+    </p>
+  </div>
+  <div class="tab-pane fade" id="midweek" role="tabpanel">
+    <p>Upcoming weekend Fixtures. Make selections to enter.</p>
+  </div>
+  <div class="tab-pane fade" id="dropdown1">
+    <p></p>
+  </div>
+  <div class="tab-pane fade" id="dropdown2">
+    <p></p>
+  </div>
+</div>
 
     <div class="accordion small-font" id="accordionExample">
       {% for league_name, fixtures in fixture_list.items %}
